fixed alignment

--- a/css/main.css
+++ b/css/main.css
@@ -773,3 +773,11 @@ textarea{
 .info{
     float: right;
 }
+
+#hosted{
+    /*margin-bottom: 38em;*/
+}
+
+#hosted{
+    display: block;
+}
